--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "nodejs-express-template",
   "version": "1.0.0",
-  "description": "An RESTful Microservice",
+  "description": "A RESTful Microservice",
   "main": "src/app.js",
   "scripts": {
     "start": "node src/app.js",
